# hyperpony

./: .gitignore  CHANGELOG.md  LICENSE  README.md  manage.py  mkdocs.yml  pyproject.toml
demo_address_book/: apps.py  models.py  views_cbv.py  views_fbv.py
demo_address_book/management/commands/: devdata_address_book.py
demo_address_book/migrations/: 0001_initial.py
demo_address_book/templates/demo_address_book/: detail_element.html
demo_address_book/templates/demo_address_book_cbv/: address_book_page.html  detail_element.html  list_element.html
demo_address_book/templates/demo_address_book_fbv/: list_element.html
docs/: CNAME  changelog.md  hooks.py  index.md
docs/.includes/: about.md  install.md
docs/.overrides/: main.html
docs/guide/: 000_about.md  010_views.md
hyperpony/: __init__.py  actions.py  client_state.py  client_state_tests.py  element.py  element_tests.py  form.py  form_tests.py  htmx.py  htmx_tests.py  htpy.py  inject_params.py  inject_params_test.py  inject_params_tests.py  middleware.py  response_handler.py  response_handler_tests.py  swap_oob_tests.py  testutils.py  utils.py  view.py  view_stack.py  view_tests.py  views.py  views_tests.py
hyperpony/static/: hyperpony.js  hyperpony_client_state.js  hyperpony_swap_merge.js
hyperpony/templatetags/: hyperpony.py
main/: admin.py  apps.py  models.py
main/management/commands/: devdata.py
main/migrations/: 0001_initial.py  0002_todo.py
main/templates/: base.html
main/templates/elements/: Level1Page.html  Level3AElement.html
main/templates/form/: FormElement.html  FormPage.html
main/templates/playground/client_state/: ClientStateElement.html  client_state_element.html  client_state_page.html
main/templates/playground/elements/: Level2Element.html  Level3AElement.html  Level3BElement.html
main/templates/playground/page/: LevelsPage.html
main/templates/playground/params/: params_page.html
main/views/: demos.py  elements.py  form.py  todoapp.py
main/views/playground/: client_state.py  elements.py  page.py  params.py
project/: settings.py  urls.py
scripts/: db_reset.sh  publish.sh
